<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2A7DFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Espace Adminstrateur"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/Ajouter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ajouter"
            android:textStyle="bold"
            android:gravity="left|center"/>

        <Button
            android:id="@+id/modifier"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/modifier"
            android:textStyle="bold"
            android:gravity="left|center"/>

        <Button
            android:id="@+id/cas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cas"
            android:textStyle="bold"
            android:gravity="left|center"/>

        <Button
            android:id="@+id/map"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/map"
            android:textStyle="bold"
            android:gravity="left|center" />
    </LinearLayout>

</LinearLayout>