<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="exple"
            />

        <TextView
            android:id="@+id/tot_cas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totcas"
            android:textSize="@dimen/item" />

        <TextView
            android:id="@+id/totcas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" "
            android:textSize="@dimen/item" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tot_act_cas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totactcas"
            android:textSize="@dimen/item" />

        <TextView
            android:id="@+id/totactcas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/item"
            android:text=" " />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tot_mort_cas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totmortcas"
            android:textSize="@dimen/item" />

        <TextView
            android:id="@+id/totcasmort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/item"
            android:text=" " />
    </LinearLayout>
</LinearLayout>